=== 1.0.1 (2019-09-24)

* Work correctly on minitest <5.6 (jeremyevans)

=== 1.0.0 (2019-09-24)

* Initial Public Release